# comfyui_musev_evolved

./: README.md  nodes.py  pyproject.toml  utils.py  v1.py
docs/assets/: example01_workflow.json
