[project]
name = "comfyui_musev_evolved"
description = "Nodes:MuseVImg2Vid (comfyui_musev_evolved)\nNOTE: Download [a/MuseV](https://huggingface.co/TMElyralab/MuseV) to ComfyUI/models/diffusers"
version = "1.0.0"
license = "LICENSE"
dependencies = ["h5py", "moviepy", "cuid", "webp", "decord", "git+https://github.com/tencent-ailab/IP-Adapter.git@main", "git+https://github.com/openai/CLIP.git@main"]

[project.urls]
Repository = "https://github.com/storyicon/comfyui_musev_evolved"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_musev_evolved"
Icon = ""
